# hal9

./: .Rbuildignore  .gitignore  .npmignore  CHANGELOG.md  CITATION.cff  CLA.md  CONTRIBUTE.md  CONTRIBUTING  DESCRIPTION  Hal9_Swarm.md  LICENSE  LICENSE.md  NAMESPACE  README.md  package-lock.json  package.json  waterfall.js  webpack.config.js
py/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
py/inst/: app.json  app.py  demoUserScript.py  server.py
py/scripts/: build_steps.py
py/src/: __init__.py  bussin.py  controls.py  demo-user-script.py  demoUserScript.py  hal9.py  server.py
py/src/bussin/: bussin.py
py/src/scripts/: build_steps.py
py/tests/: test_bussin.py  test_hal9.py
python/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build_components.py  build_init.py  hal9.ipynb  pyproject.toml  resources  setup.py  src  target
python/docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  steps.html  usage.html
python/docs/.doctrees/: environment.pickle  index.doctree  steps.doctree  usage.doctree
python/docs/_sources/: index.rst.txt  steps.rst.txt  usage.rst.txt
python/docs/source/: __init__.py  conf.py  index.rst
python/hal9/: __init__.py  api.py  cli.py  code.py  complete.py  controls.py  core.py  create.py  deploy.py  describe.py  events.py  filetotext.py  iobind.py  run.py  urls.py
python/hal9/login/: __init__.py
python/hal9/login/frontend/: package.json
python/hal9/runtimes/: chainlit.py  image.py  plumber.py  python.py  r.py  threed.py
python/hal9/targets/: docker.py  hal9.py
python/hal9/templates/docker/: Dockerfile
python/hal9/templates/echo/: app.py
python/hal9/templates/groq/: app.py  groq-website-builder.py
python/hal9/templates/openai/: app.py
python/sphinx/source/: conf.py  hal9.rst  index.rst  modules.rst
python/src/hal9/: __init__.py  conf.py  index.rst  steps.rst  teste.ipynb
python/src/hal9/data/: __init__.py  assign.js  bar_chart.js  bubble_chart.js  convert.js  derive.js  dot_chart.js  drop.js  error_chart.js  facets_chart.js  filter.js  fold.js  funnel_chart.js  heatmap_chart.js  histogram_chart.js  impute.js  line_chart.js  load.js  load_images.js  map_chart.js  network_chart.js  pivot.js  plotly_chart.js  radial_chart.js  read_csv.js  (+18 more)
python/test/: app.py
python/tests/: app.py  test_code.py  test_extract.py  test_hal9.py  test_iobind.py  test_save.py  test_urls.py  tests.py
server/: Cargo.toml
server/examples/my_app/: app.json  hal9.toml
server/examples/my_app_py/: app.json  hal9.toml
server/resources/: client.html
server/resources/demo_app/: app.json
server/resources/demo_app_py/: app.json  hal9.toml
server/resources/demo_app_r/: app.json
server/src/: _hal9.rs  app_template.rs  async_watcher.rs  config.rs  extendr.rs  lib.rs  manifest.rs  pyo3.rs  runtimes.rs  server.rs  shutdown.rs  util.rs
(+958 files in other folders)
