[tool.poetry]
name = "hal9"
version = "0.0.1"
description = "Design Interactive Data Apps Without Web Dev"
authors = ["Anchit Sadana", "Hal9 Inc."]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
