[tool.poetry]
name = "hal9"
version = "2.0.9"
description = ""
authors = ["Javier Luraschi <javier@hal9.ai>"]
readme = "README.md"
include = ["templates/openai/app.py", "templates/docker/Dockerfile"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
requests = "^2.28.2"

click = "^8.1.7"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hal9 = "hal9.cli:cli"