[package]
name = "hal9"
version = "0.1.17"
edition = "2021"
rust-version = "1.64"

[lib]
name = "hal9"
path = "src/lib.rs"
crate-type = ['lib', 'staticlib']

[[bin]]
name = "hal9"
path = "src/bin/cli.rs"

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
actix-multipart = "0.4.0"
mime = "0.3.16"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
notify = {version = "5.0.0", default-features = false, features = ["macos_kqueue"] }
tokio = { version = "1.20.1", features = ["full"] }
clap = { version = "4.0.10", features = ["derive"] }
crossbeam = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
extendr-api = { version = "0.3.1", optional = true }
url = "2.2.2"
futures = "0.3.25"
webbrowser = "0.8.0"
regex = "1"
pyo3 = { version = "0.17.2", features = ["extension-module", "abi3-py38", "generate-import-lib", "generate-abi3-import-lib"], optional = true}
json = "0.12.4"
futures-util = "0.3.25"

[features]
extendr = ["dep:extendr-api"]

[package.metadata.maturin]
name = "hal9._hal9"
